# douban-crawler

./: .gitignore  README.md  code.py  crawler.py  database.db  notebook.ipynb  pyproject.toml  recent_tvshows.pkl
douban_crawler/: __main__.py  cli.py  core.py  dashboard.py  default.py
